--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
     <uses-permission android:name="android.permission.READ_SMS" />
 
     <application
+        android:name="com.hshop.shopping.C0456b"
         android:allowBackup="true"
         android:icon="@drawable/h_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/h_logo"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".shopping.Master_Home"
